--- a/BikeToronto/Info.plist
+++ b/BikeToronto/Info.plist
@@ -26,6 +26,10 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location is required to find you</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Location is required to find you</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
